

                             Kiji Express Music Tutorial Release Notes

Version 0.6.0
  * EXP-107. Updated example code to agree with KijiExpress package reorganization.

Version 0.5.0
  * EXP-80. Provides an example of using the extract and score model
      lifecycle phases to make recommendations.
  * EXP-84. Removes Scala-to-Java list conversions that are no longer
      necessary from tutorial code.
  * EXP-76. Fixes an incorrect $ in README instructions for exporting
      environment variables.
  * EXP-72. Updates all tutorial examples to use KijiJob instead of
      Scalding's Job. KijiJob provides additional operations on pipes,
      such as the methods packAvro and unpackAvro, which the tutorial is
      also updated to employ.
  * EXP-49. Includes the bulk import descriptor needed to import the
      tutorial data.

Version 0.4.0
  * EXP-37. Updates tutorial to use AvroRecord when reading from Kiji.

Version 0.3.0
  * EXP-25. Updates tutorial to use new EntityId mechanisms in KijiExpress.

Version 0.2.0
  * CHOP-59. Add SongRecommender and test suite to tutorial.
      Adds SongRecommender.scala, which uses the results of previous tutorial steps to produce
      a recommendation for the next song a user should listen to.
  * CHOP-100. Use express.EntityId in music tutorial.
      Replace the uses of entityId method in KijiExpress music tutorial with the new
      org.kiji.express.EntityId class. This change decreases the runtime of the bulk importer
      to ~30 seconds.
  * CHOP-68. Ensure resources are closed properly in tutorial code.
      This commit modifies the importers and top next songs producer to
      use doAndRelease when creating entity ids, not retainAnd. This
      ensures all resources are closed properly.