@@ -3,7 +3,10 @@
                              Kiji Express Music Tutorial Release Notes
 
 Version 0.6.0
-  * EXP-107. Updated example code to agree with KijiExpress package reorganization.
+  * EXP-154. Update example code to agree with refactoring of DSL and
+    TimeRange into the org.kiji.express.flow module.
+  * EXP-107. Updated example code to agree with KijiExpress package
+    reorganization.
 
 Version 0.5.0
   * EXP-80. Provides an example of using the extract and score model
